backe bağlama calisan_goruntule.html
bi de küçük buton adı güncellemesi

--- a/calisan_goruntule.html
+++ b/calisan_goruntule.html
@@ -8,11 +8,11 @@
     <title>MTE</title>
 </head>
 <body>
-    <form action="http://localhost:3006/api/students" method="POST">
+    <form action="calisan_goruntule_back.php" method="POST">
         
         <label for="calisan">Adı giriniz (Bütün çalışanlar için '*' giriniz):</label>
         <input type="text" id="calisan" name="calisan" required><br>
 
-        <button type="submit">Dersi ekle</button>    </form>
+        <button type="submit">Çalışanı getir</button>    </form>
 </body>
 </html>
