--- a/calisan_ekle.html
+++ b/calisan_ekle.html
@@ -10,7 +10,7 @@
 
 </head>
 <body>
-    <form action="http://localhost:3006/api/" method="POST">
+    <form action="calisan_ekle_back.php" method="POST">
         <h1>Yeni Çalışan Bilgileri</h1>
 
         <label for="meslek">Mesleği:</label>
