--- a/ogrenci_ekle.html
+++ b/ogrenci_ekle.html
@@ -48,11 +48,12 @@
         </select><br>
         
     <h2>Yeni Veli Bilgileri</h2>
-        <label for="ad">Ad:</label>
-        <input type="text" id="ad" name="ad" required><br>
+        <label for="veli_ad">Ad:</label>
+        <input type="text" id="veli_ad" name="veli_ad" required><br>
 
-        <label for="soyad">Soyad:</label>
-        <input type="text" id="soyad" name="soyad" required><br>
+        <label for="veli_soyad">Soyad:</label>
+        <input type="text" id="veli_soyad" name="veli_soyad" required><br>
+
        
         <label for="mail">Mail:</label>
         <input type="text" id="mail" name="mail" required><br>
