--- a/calisan_ekle.html
+++ b/calisan_ekle.html
@@ -22,7 +22,7 @@
 
         <br>
         <div id="ogretmenContainer" style="display: none;">
-            <label for="dersKodu">Ders Kodu:</label>
+            <label for="dersAdi">Ders Adı :</label>
             <select style="font-size: 14px; padding: 5px;" id="dersKodu"  name="dersKodu"  onchange="checkOtherOption()">
                 <option value="matematik">Matematik</option>
                 <option value="ingilizce">Ingilizce</option>
@@ -41,10 +41,63 @@
 
 
         <label for="calismaZamani">Çalışma Zamanı:</label>
-        <select type="text" id="calismaZamani"  name="calismaZamani">
+        <select type="text" id="calismaZamani"  name="calismaZamani" onchange="checkWorkerTime()">
             <option value="tamZamanli">Tam Zamanlı</option>
             <option value="yariZamanli">Yarı Zamanlı</option>
         </select><br><br>
+
+        <div id="yariZamanliContainer" style="display: none">
+            <table border="1">
+                <tr>
+                    <th></th>
+                    <th>Pazartesi</th>
+                    <th>Sali</th>
+                    <th>Carsamba</th>
+                    <th>Persembe</th>
+                    <th>Cuma</th>
+                </tr>
+                <tr>
+                    <td>08:00</td>
+                    <td><input type="radio" name="schedule[08:00][Pazartesi]" value="108"></td>
+                    <td><input type="radio" name="schedule[08:00][Sali]" value="208"></td>
+                    <td><input type="radio" name="schedule[08:00][Carsamba]" value="308"></td>
+                    <td><input type="radio" name="schedule[08:00][Persembe]" value="408"></td>
+                    <td><input type="radio" name="schedule[08:00][Cuma]" value="508"></td>
+                </tr>
+                <tr>
+                    <td>10:00</td>
+                    <td><input type="radio" name="schedule[10:00][Pazartesi]" value="110"></td>
+                    <td><input type="radio" name="schedule[10:00][Sali]" value="210"></td>
+                    <td><input type="radio" name="schedule[10:00][Carsamba]" value="310"></td>
+                    <td><input type="radio" name="schedule[10:00][Persembe]" value="410"></td>
+                    <td><input type="radio" name="schedule[10:00][Cuma]" value="510"></td>
+                </tr>
+                <tr>
+                    <td>12:00</td>
+                    <td><input type="radio" name="schedule[12:00][Pazartesi]" value="112"></td>
+                    <td><input type="radio" name="schedule[12:00][Sali]" value="212"></td>
+                    <td><input type="radio" name="schedule[12:00][Carsamba]" value="312"></td>
+                    <td><input type="radio" name="schedule[12:00][Persembe]" value="412"></td>
+                    <td><input type="radio" name="schedule[12:00][Cuma]" value="512"></td>
+                </tr>       
+                <tr>
+                    <td>14:00</td>
+                    <td><input type="radio" name="schedule[14:00][Pazartesi]" value="114"></td>
+                    <td><input type="radio" name="schedule[14:00][Sali]" value="214"></td>
+                    <td><input type="radio" name="schedule[14:00][Carsamba]" value="314"></td>
+                    <td><input type="radio" name="schedule[14:00][Persembe]" value="414"></td>
+                    <td><input type="radio" name="schedule[14:00][Cuma]" value="514"></td>
+                </tr>
+                <tr>
+                    <td>16:00</td>
+                    <td><input type="radio" name="schedule[16:00][Pazartesi]" value="116"></td>
+                    <td><input type="radio" name="schedule[16:00][Sali]" value="216"></td>
+                    <td><input type="radio" name="schedule[16:00][Carsamba]" value="316"></td>
+                    <td><input type="radio" name="schedule[16:00][Persembe]" value="416"></td>
+                    <td><input type="radio" name="schedule[16:00][Cuma]" value="516"></td>
+                </tr>
+            </table>
+        </div>
 
         <label for="tcKimlik">TC Kimliği:</label>
         <input type="number" id="tcKimlik" name="tcKimlik" required><br>
@@ -79,6 +132,16 @@
 
         <button type="submit" >Dersi ekle</button>
         <script>
+            function checkWorkerTime() {
+                const selectElement = document.getElementById('calismaZamani');
+                const yariZamanliContainer = document.getElementById('yariZamanliContainer');
+
+                if (selectElement.value === 'yariZamanli') {
+                    yariZamanliContainer.style.display = 'block';
+                } else {
+                    yariZamanliContainer.style.display = 'none';
+                }
+            }
 
             function checkTeacher() {
                 const selectElement = document.getElementById('meslek');
