--- a/calisan_ekle.html
+++ b/calisan_ekle.html
@@ -97,7 +97,7 @@
                     <td><input type="radio" name="schedule[16:00][Cuma]" value="516"></td>
                 </tr>
             </table>
-        </div>
+        </div><br>
 
         <label for="tcKimlik">TC Kimliği:</label>
         <input type="number" id="tcKimlik" name="tcKimlik" required><br>
