--- a/ogrenci_ekle.html
+++ b/ogrenci_ekle.html
@@ -83,10 +83,10 @@
         
     <h2>Yeni Veli Bilgileri</h2>
         <label for="ad">Ad:</label>
-        <input type="text" id="ad" name="ad" required><br>
+        <input type="text" id="veliAd" name="veliAd" required><br>
 
         <label for="soyad">Soyad:</label>
-        <input type="text" id="soyad" name="soyad" required><br>
+        <input type="text" id="veliSoyad" name="veliSoyad" required><br>
        
         <label for="mail">Mail:</label>
         <input type="text" id="mail" name="mail" required><br>
