--- a/ogrenci_ekle.html
+++ b/ogrenci_ekle.html
@@ -92,7 +92,7 @@
         <input type="text" id="mail" name="mail" required><br>
            
         <label for="telefon">Telefon Numarası:</label>
-        <input type="text" id="telefonNo" name="telefonNo" required><br>
+        <input type="number" id="telefonNo" name="telefonNo" required><br>
         
         <label for="kiminNesi">Yakınlık Durumu:</label>
         <input type="text" id="kiminNesi" name="kiminNesi" required><br>
