--- a/calisan_ekle.html
+++ b/calisan_ekle.html
@@ -128,7 +128,7 @@
         <input type="text" id="mail" name="mail" required><br>
            
         <label for="telefon">Telefon Numarası:</label>
-        <input type="text" id="telefonNo" name="telefonNo" required><br>
+        <input type="number" id="telefonNo" name="telefonNo" required><br>
 
         <button type="submit" >Dersi ekle</button>
         <script>
