clisan_ekle_back musaitlik

--- a/ogrenci_ekle.html
+++ b/ogrenci_ekle.html
@@ -9,7 +9,7 @@
     <title>MTE</title>
 </head>
 <body>
-    <form action="http://localhost:3006/api/students" method="POST">
+    <form action="ogrenci_ekle_back.php" method="POST">
     <h1>Yeni Öğrenci Bilgileri</h1>   
         <label for="dogumTarihi">Doğum Tarihi:</label>
         <input type="date" id="dogumTarihi" name="dogumTarihi" required><br>
@@ -83,10 +83,10 @@
         
     <h2>Yeni Veli Bilgileri</h2>
         <label for="ad">Ad:</label>
-        <input type="text" id="veliAd" name="veliAd" required><br>
+        <input type="text" id="veli_ad" name="veli_ad" required><br>
 
         <label for="soyad">Soyad:</label>
-        <input type="text" id="veliSoyad" name="veliSoyad" required><br>
+        <input type="text" id="veli_soyad" name="veli_soyad" required><br>
        
         <label for="mail">Mail:</label>
         <input type="text" id="mail" name="mail" required><br>
