--- a/calisan_ekle.html
+++ b/calisan_ekle.html
@@ -130,7 +130,7 @@
         <label for="telefon">Telefon Numarası:</label>
         <input type="number" id="telefonNo" name="telefonNo" required><br>
 
-        <button type="submit" >Dersi ekle</button>
+        <button type="submit" >Çalışanı ekle</button>
         <script>
             function checkWorkerTime() {
                 const selectElement = document.getElementById('calismaZamani');
