--- a/ders_ekle.html
+++ b/ders_ekle.html
@@ -8,53 +8,46 @@
     <title>MTE</title>
 </head>
 <body>
-    <form action="http://localhost:3006/api/students" method="POST">
+    <form action="ders_ekle_back.php" method="POST">
         <h1>Yeni Ders Bilgileri</h1>
 
-        <h1>Öğrenci Ders Talebi</h1>
-
-        <label for="dersler">Eklenebilecek Dersler:</label>
-        <div>
-            <?php
-                include "database.php";
-                $result = $db->query("SELECT ders_adi FROM ders_talep GROUP BY ders_adi HAVING COUNT(*) > 12");
-
-                while ($row = $result->fetch_assoc()) {
-                    echo $row['ders_adi'];
-                }
-                
-                $db->close();
-            ?>
-        </div>
+            <label for="dersAdi">Ders Adı :</label>
+            <select style="font-size: 14px; padding: 5px;" id="dersAdi"  name="dersAdi"  onchange="checkOtherOption()">
+                <option value="matematik">Matematik</option>
+                <option value="ingilizce">Ingilizce</option>
+                <option value="almanca">Almanca</option>
+                <option value="satranç">Satranç</option>
+                <option value="webTasarim">Web Tasarim</option>
+                <option value="robotik">Robotik</option>
+                <option value="diger">Diğer</option>
+    
+            </select>
+            <div id="digerDersAdi" style="display: none;">
+                <label for="digerDersAdi">Diğer Ders Adı:</label>
+                <textarea style="font-size: 14px; width: 150px; height: 20px;" id="digerDersAdi" name="digerDersAdi"></textarea>
+            </div><br>
 
         <label for="dersKodu">Ders Kodu:</label>
         <textarea style="font-size: 14px; width: 150px; height: 20px;" id="dersKodu" name="dersKodu"></textarea><br>     
 
         <button type="submit" >Dersi ekle</button>
     <script>
-        function checkOtherOption() {
-            const selectElement = document.getElementById('dersKodu');
-            const otherOptionContainer = document.getElementById('digerDers');
-            const digerTextArea = document.getElementById('digerDersKodu');
 
-            if (selectElement.value === 'diger') {
-                otherOptionContainer.style.display = 'block';
-                digerTextArea.required = true;
-            } else {
-                otherOptionContainer.style.display = 'none';
-                digerTextArea.required = false;
-            }
+    function checkOtherOption() {
+        const selectElement = document.getElementById('dersAdi');
+        const otherOptionContainer = document.getElementById('digerDersAdi');
+        const digerTextArea = document.getElementById('digerDersAdi');
+
+        if (selectElement.value === 'diger') {
+            otherOptionContainer.style.display = 'block';
+            digerTextArea.required = true;
+        } else {
+            otherOptionContainer.style.display = 'none';
+            digerTextArea.required = false;
         }
+    }
 
-        function showSelected() {
-            const selectElement = document.getElementById('dersKodu');
-            const gun = document.getElementById('gun');
-            const saat = document.getElementById('saat');
-            const digerTextArea = document.getElementById('digerDersKodu');
-            const selectedOption = selectElement.value === 'diger' ? digerTextarea.value : selectElement.value;
 
-            alert(selectedOption + ' ' + gun.value + ' günü saat ' + saat.value + ' olarak oluşturuldu');
-        }
     </script>
     </form>
 </body>
