--- a/ders_ekle.html
+++ b/ders_ekle.html
@@ -17,11 +17,11 @@
                 <option value="ingilizce">Ingilizce</option>
                 <option value="almanca">Almanca</option>
                 <option value="satranç">Satranç</option>
-                <option value="webTasarim">Web Tasarim</option>
+                <option value="webTasarim">Web Tasarım</option>
                 <option value="robotik">Robotik</option>
                 <option value="diger">Diğer</option>
     
-            </select>
+            </select><br><br>
             <div id="digerDersAdi" style="display: none;">
                 <label for="digerDersAdi">Diğer Ders Adı:</label>
                 <textarea style="font-size: 14px; width: 150px; height: 20px;" id="digerDersAdi" name="digerDersAdi"></textarea>
@@ -30,6 +30,7 @@
         <label for="dersKodu">Ders Kodu:</label>
         <textarea style="font-size: 14px; width: 150px; height: 20px;" id="dersKodu" name="dersKodu"></textarea><br>     
 
+        <br>
         <button type="submit" >Dersi ekle</button>
     <script>
 
