--- a/ogrenci_ekle.html
+++ b/ogrenci_ekle.html
@@ -97,7 +97,7 @@
         <label for="kiminNesi">Yakınlık Durumu:</label>
         <input type="text" id="kiminNesi" name="kiminNesi" required><br>
         
-        <button type="submit" >Dersi ekle</button>
+        <button type="submit" >Öğrenciyi ekle</button>
 
     </form>              
 </body>
