--- a/veli_goruntule.html
+++ b/veli_goruntule.html
@@ -10,7 +10,7 @@
 <body>
     <form action="veli_goruntule_back.php" method="POST">
         
-        <label for="veli">Adı giriniz (Bütün öğrenciler için '*' giriniz):</label>
+        <label for="veli">Adı giriniz (Bütün veliler için '*' giriniz):</label>
         <input type="text" id="veli" name="veli" required><br>
 
         <button type="submit">Veliyi getir</button>    </form>
