--- a/ders_programi_goruntule.html
+++ b/ders_programi_goruntule.html
@@ -23,24 +23,24 @@
 
     </form><br>
 
-    <form action="ders_programi_goruntule_back.php" method="POST">
-        <div id="dersContainer" style="display: block">
+    <form id="dersContainer" action="ders_programi_goruntule_back.php" method="POST" style="display: block">
+        <div>
             <label for="p_id_ders">Ders kodu giriniz (Bütün dersler için '*' giriniz):</label>
             <input type="text" id="p_id_ders" name="p_id_ders"><br>
             <button type="submit">Program getir</button>
         </div>
     </form><br>
 
-    <form action="ders_programi_goruntule_back.php" method="POST">
-        <div id="ogrenciContainer" style="display: none">
+    <form id="ogrenciContainer" action="ders_programi_goruntule_back.php" method="POST" style="display: none">
+        <div>
             <label for="p_id_ogrenci">Numara giriniz (Bütün öğrenciler için '*' giriniz):</label>
             <input type="text" id="p_id_ogrenci" name="p_id_ogrenci"><br>
             <button type="submit">Program getir</button>
         </div>
     </form><br>
 
-    <form action="ders_programi_goruntule_back.php" method="POST">
-        <div id="ogretmenContainer" style="display: none">
+    <form id="ogretmenContainer" action="ders_programi_goruntule_back.php" method="POST" style="display: none">
+        <div>
             <label for="p_id_ogretmen">Numara giriniz (Bütün çalışanlar için '*' giriniz):</label>
             <input type="text" id="p_id_ogretmen" name="p_id_ogretmen"><br>
             <button type="submit">Program getir</button>
