--- a/ogrenci_goruntule.html
+++ b/ogrenci_goruntule.html
@@ -9,8 +9,24 @@
 </head>
 <body>
     <form action="ogrenci_goruntule_back.php" method="POST">
-        
-        <label for="ogrenci">Adı giriniz (Bütün öğrenciler için '*' giriniz):</label>
+      
+        <label for="siralamaTuru">Sıralama ölçütü:</label>
+        <select type="text" id="siralamaTuru" name="siralamaTuru">
+            <option value="id">ID</option>
+            <option value="isim">İsim</option>
+            <option value="soyisim">Soyisim</option>
+            <option value="yas">Yaş</option>
+        </select><br><br>
+
+
+        <label for="filtrelemeTuru">Girilmek istenen bilgi:</label>
+        <select type="text" id="filtrelemeTuru" name="filtrelemeTuru">
+            <option value="isim">İsim</option>
+            <option value="soyisim">Soyisim</option>
+            <option value="yas">Yaş</option>
+        </select><br><br>
+
+        <label for="ogrenci">Bilgiyi giriniz (Bütün  için '*' giriniz):</label>
         <input type="text" id="ogrenci" name="ogrenci" required><br>
 
         <button type="submit">Öğrenciyi getir</button>    </form>
