--- a/ders_talep.html
+++ b/ders_talep.html
@@ -8,7 +8,7 @@
     <title>MTE</title>
 </head>
 <body>
-    <form action="ders_ekle_back.php" method="POST">
+    <form action="ders_talep_back.php" method="POST">
         <h1>Ders Talebi</h1>
 
             <label for="dersAdi">Ders Adı :</label>
