--- a/ogrenci_goruntule.html
+++ b/ogrenci_goruntule.html
@@ -37,6 +37,7 @@
             <option value="soyisim">Soyisim</option>
             <option value="yas">Yaş</option>
             <option value="cinsiyet">Cinsiyet</option>
+            <option value="id">Id</option>
         </select><br><br>
         
         <label>Filtre:</label>
