--- a/calisan_goruntule.html
+++ b/calisan_goruntule.html
@@ -69,8 +69,8 @@
 
         </div>
 
-        <label for="ogrenci">Bilgiyi giriniz (Bütün için '*' giriniz):</label>
-        <input type="text" id="ogrenci" name="ogrenci" required><br>
+        <label for="calisan">Bilgiyi giriniz (Bütün için '*' giriniz):</label>
+        <input type="text" id="calisan" name="calisan" required><br>
 
         <button type="submit">Çalışanı getir</button>
     </form>
