--- a/calisan_goruntule.html
+++ b/calisan_goruntule.html
@@ -84,7 +84,7 @@
                 checkbox.type = 'checkbox';
                 checkbox.id = 'dersKodu';
                 checkbox.name = 'filtre[]';
-                checkbox.value = 'd.ders_kodu';
+                checkbox.value = 'ders_kodu';
     
                 const filtreDiv = document.getElementById('filtre');
                 filtreDiv.appendChild(checkboxLabel);
