--- a/calisan_goruntule.html
+++ b/calisan_goruntule.html
@@ -10,7 +10,6 @@
 <body>
     <form action="calisan_goruntule_back.php" method="POST">
 
-        
         <div style="display: flex; align-items: center;" name="meslek" id="meslek">
             <label for="ogretmen" style="margin-right: 10px;">Öğretmen</label>
             <input type="checkbox" id="ogretmen" name="meslek" value="view_ogretmen_info" onchange="addCheckboxForOgretmen()">
@@ -43,16 +42,16 @@
         <label>Filtre:</label>
         <div  id="filtre" style="display: flex; align-items: center;">
             <label for="calisan_id" style="margin-right: 10px;">ID</label>
-            <input type="checkbox" id="t.calisan_id" name="filtre[]" value="t.calisan_id">
+            <input type="checkbox" id="t.calisan_id" name="filtre[]" value="calisan_id">
 
             <label for="calisan_isim" style="margin-right: 10px;">İsim</label>
-            <input type="checkbox" id="t.calisan_isim" name="filtre[]" value="t.calisan_isim">
+            <input type="checkbox" id="t.calisan_isim" name="filtre[]" value="calisan_isim">
 
             <label for="calisan_soyisim" style="margin-right: 10px; margin-left: 10px;">Soyisim</label>
-            <input type="checkbox" id="t.calisan_soyisim" name="filtre[]" value="t.calisan_soyisim">
+            <input type="checkbox" id="t.calisan_soyisim" name="filtre[]" value="calisan_soyisim">
 
             <label for="calisan_cinsiyet" style="margin-right: 10px; margin-left: 10px;">Cinsiyet</label>
-            <input type="checkbox" id="t.calisan_cinsiyet" name="filtre[]" value="t.calisan_cinsiyet">
+            <input type="checkbox" id="t.calisan_cinsiyet" name="filtre[]" value="calisan_cinsiyet">
 
         </div>
 
@@ -71,7 +70,7 @@
                 checkbox.type = 'checkbox';
                 checkbox.id = 'dersKodu';
                 checkbox.name = 'filtre[]';
-                checkbox.value = 'm.ders_kodu';
+                checkbox.value = 'ders_kodu';
     
                 const filtreDiv = document.getElementById('filtre');
                 filtreDiv.appendChild(checkboxLabel);
